[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Shrine.gd" type="Script" id=1]
[ext_resource path="res://default_theme.tres" type="Theme" id=2]
[ext_resource path="res://default_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/TextBox.gd" type="Script" id=4]
[ext_resource path="res://Images/Shrines/BloodShrine.png" type="Texture" id=5]

[node name="Shrine" type="Node"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="TextContainer" type="CenterContainer" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.225937
margin_top = -46.0789
margin_right = 0.225937
margin_bottom = -25.0789

[node name="TextBox" type="Label" parent="Control/TextContainer"]
margin_left = 11.0
margin_top = 4.0
margin_right = 148.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 3 )
text = "A Bloody Shrine glows in the Dark"
script = ExtResource( 4 )

[node name="ButtonContainer" type="CenterContainer" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.225937
margin_top = -29.7446
margin_right = 0.225937
margin_bottom = -4.74464

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 80, 40 )
texture = ExtResource( 5 )
